# cef-sample-apps_XXZV

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/minimal/: app_other_minimal.cpp  app_renderer_minimal.cpp  main_minimal.cpp
code/shared/: CMakeLists.txt  app_factory.hpp  browser_util.cpp  browser_util.hpp  client_manager.cpp  client_manager.hpp  client_util.cpp  client_util.hpp  client_util_linux.cpp  main.hpp  main_linux.cpp  main_util.cpp  main_util.hpp  resource_util.cpp  resource_util.hpp  resource_util_linux.cpp  resource_util_posix.cpp
code/simple-app/: CMakeLists.txt  cefbrowser.cpp  cefclient.cpp  cefclient.hpp  main.cpp  resource_util_win_impl.cpp
code/simple-app/resources/: resource_manager.html
code/simple-app/resources/js/objects/: box.js
